--- a/Pagina remax/index.html
+++ b/Pagina remax/index.html
@@ -12,12 +12,21 @@
   <link rel="stylesheet" href="./assets/styles/styleSheetRemax.css">
   <link rel="stylesheet" href="assets/styles/simpleSlider.min.css">
   <link rel="stylesheet" href="assets/styles/theme.min.css">
-  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-  <script defer src='assets/scripts/main.js'></script>
+  
+  
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+
+
+
+
 
 </head>
 
 <body>
+
+
+
+  
   <header>
     <div class="grid">
       <div class="col-2-12" style="margin-left:9em">
@@ -90,13 +99,7 @@
       <!-- /Slider -->
     </div>
 
-    <script src="assets/scripts/simpleSlider.min.js"></script>
-    <script>
-      new SimpleSlider('.page-slider', {
-        autoplay: true,
-        delay: 2000
-      });
-    </script>
+
 
     <section class="porque" id="porque">
       <div class="grid">
@@ -112,11 +115,11 @@
           <h2 style="margin-bottom:4.5em">Hoy en día cuenta con 150 oficinas desarrolladas en Argentina y
             Uruguay.</h2>
         </div>
+        <div class="col-1-2" style="padding-right: 0em;">
+          <img src="assets\images\REMAX_mastrBalloon_RGB_R-01.png" style="width:10%;padding-top: 8%"></img>
+          <img src="assets/images/porqueRemax.jpg" style="width:100%;padding-top: 10%">
+        </div>
         <div>
-          <div class="col-1-2" style="padding-right: 0em;">
-            <img src="assets\images\REMAX_mastrBalloon_RGB_R-01.png" style="width:10%;padding-top: 8%"></img>
-            <img src="assets/images/porqueRemax.jpg" style="width:100%;padding-top: 10%">
-          </div>
           <div class="col-1-1">
             <h1 id="propuesta" style="margin-top: 1em;">Por qué<img src="assets\images/REMAXTIME.png"
                 style="width:20%;padding-left: 0.5em;">?</h1>
@@ -203,13 +206,16 @@
     </section>
 
     <section class="perfil" id="perfil">
-      <div class="grid">
-        <div class="col-1-1">
+
+
           <h2><span>PERFIL DEL
               AGENTE</span></h2>
+
+        <div class="container" >
+          <div class="row"id="containerValores"></div>
+        
         </div>
-        <div style="margin:5em" id="containerValores"></div>
-      </div>
+
     </section>
 
     <section class="teams" id="teams">
@@ -250,6 +256,31 @@
         </div>
       </div>
     </footer>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+
+  
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+
+    <script src="assets/scripts/simpleSlider.min.js"></script>
+    <script>
+window.addEventListener("load", function(){
+  new SimpleSlider('.page-slider', {
+        autoplay: true,
+        delay: 2000
+      });
+})
+
+
+
+    </script>
+
+
+
+
+    <script src='assets/scripts/main.js'></script>
 </body>
 
 </html>
