--- a/Pagina remax/index.html
+++ b/Pagina remax/index.html
@@ -12,98 +12,81 @@
   <link rel="stylesheet" href="./assets/styles/styleSheetRemax.css">
   <link rel="stylesheet" href="assets/styles/simpleSlider.min.css">
   <link rel="stylesheet" href="assets/styles/theme.min.css">
-  
-  
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+  <link href='https://fonts.googleapis.com/css?family=Montserrat Alternates' rel='stylesheet'>
 
-
-
-
-
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 </head>
 
 <body>
-
-
-
-  
-  <header>
-    <div class="grid">
-      <div class="col-2-12" style="margin-left:9em">
-        <img src="assets\images\TIME 2018 (RGB).png">
-      </div>
-      <div class="col-1-12">
-        <div class="hh">
-          <a href="#inicio">inicio</a>
-        </div>
-      </div>
-      <div class="col-1-12">
-        <div class="hh">
-          <a href="#quienes">Quienes somos</a>
-        </div>
-      </div>
-      <div class="col-1-12">
-        <div class="hh">
-          <a href="#propuesta">Propuesta</a>
-        </div>
-      </div>
-      <div class="col-1-12">
-        <div class="hh">
-          <a href="#perfil">Perfil de Agente</a>
-        </div>
-      </div>
-      <div class="col-1-12">
-        <div class="hh">
-          <a href="#teams">Nuestro Equipo</a>
-        </div>
-      </div>
-      <div class="col-1-12">
-        <div class="hh">
-          <a href="https://www.remax.com.ar/es-ar/oficinas/capital-federal/villa-crespo/remax-time/42100"  target="_blank">Propiedades</a>
-        </div>
-      </div>
-      <div class="col-1-12">
-        <div class="hh">
-          <a href="#Encontranos">Encontranos</a>
-        </div>
-      </div>
+  <nav class="navbar navbar-expand-lg navbar-light" style="background-color: white;">
+    <a class="navbar-brand" href="#" style="margin-left: 7em;">
+      <img src="assets\images\TIME 2018 (RGB).png" width="200px" class="d-inline-block align-top" alt=""
+        loading="lazy"></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Inicio<span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="#quienes">Quienes somos<span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#propuesta">Propuesta<span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#perfil">Perfil<span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#teams">Nuestro equipo<span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link"
+            href="https://www.remax.com.ar/es-ar/oficinas/capital-federal/villa-crespo/remax-time/42100"
+            target="_blank">Propiedades<span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#Encontranos">Encontranos<span class="sr-only">(current)</span></a>
+        </li>
+      </ul>
     </div>
-  </header>
+  </nav>
 
-  <div class="page">
-    <!-- Slider -->
+  <div class="slider">
     <div class="simple-slider page-slider">
       <div class="slider-wrapper">
         <div class="slider-slide">
-          <img src="assets\images\slideShow\1.jpg" style="width:100%">
+          <img src="assets\images\slideShow\1.jpg" class="sliderimg">
         </div>
         <div class="slider-slide">
-          <img src="assets\images\slideShow\2.png" style="width:100%">
+          <img src="assets\images\slideShow\2.png" class="sliderimg">
         </div>
         <div class="slider-slide">
-          <img src="assets\images\slideShow\3.png" style="width:100%">
+          <img src="assets\images\slideShow\3.png" class="sliderimg">
         </div>
         <div class="slider-slide">
-          <img src="assets\images\slideShow\4.jpg" style="width:100%">
+          <img src="assets\images\slideShow\4.jpg" class="sliderimg">
         </div>
         <div class="slider-slide">
-          <img src="assets\images\slideShow\5.jpg" style="width:100%">
+          <img src="assets\images\slideShow\5.jpg" class="sliderimg">
         </div>
         <div class="slider-slide">
-          <img src="assets\images\slideShow\6.jpg" style="width:100%">
+          <img src="assets\images\slideShow\6.jpg" class="sliderimg">
         </div>
       </div>
-      <div class="slider-text"><span>Sos emprendedor y queres tener </span><span style="font-weight: bold;">TU PROPIO
-          NEGOCIO?</span< /div>
+      <div class="slider-text"><span>Sos emprendedor y queres tener </span><span class="bolder">TU PROPIO
+          NEGOCIO?</span>
       </div>
       <!-- /Slider -->
     </div>
 
-
-
     <section class="porque" id="porque">
-      <div class="grid">
-        <div class="col-1-2" style=" background-color: rgba(138, 202, 255, 1);">
+      <div class="row" id="Encontranos" style="margin:0em">
+        <div class=" col-sm-12 col-md-6  col-xl-6" style=" background-color: rgba(138, 202, 255, 1);">
           <h1 id="quienes">Por qué<img src="assets\images\REMAX - RGB-01.png" style="width:40%;padding-left: 0.5em;">?
           </h1>
           <h2>RE/MAX es la Empresa de Servicios Inmobiliarios más grande del mundo y opera en la
@@ -115,171 +98,80 @@
           <h2 style="margin-bottom:4.5em">Hoy en día cuenta con 150 oficinas desarrolladas en Argentina y
             Uruguay.</h2>
         </div>
-        <div class="col-1-2" style="padding-right: 0em;">
-          <img src="assets\images\REMAX_mastrBalloon_RGB_R-01.png" style="width:10%;padding-top: 8%"></img>
-          <img src="assets/images/porqueRemax.jpg" style="width:100%;padding-top: 10%">
-        </div>
-        <div>
-          <div class="col-1-1">
-            <h1 id="propuesta" style="margin-top: 1em;">Por qué<img src="assets\images/REMAXTIME.png"
-                style="width:20%;padding-left: 0.5em;">?</h1>
+        <div class="col-sm-12 col-md-6 col-xl-6" style="padding: 0;">
+          <div>
+            <img src="assets\images\REMAX_mastrBalloon_RGB_R-01.png" class="globo"></img>
+            <img src="assets/images/porqueRemax.jpg" class="bottom">
           </div>
-          <div style="margin:15em" id="containerBoxes">
-            <div class="col-1-3">
-              <div style="background-color: rgba(193, 27, 43, 1);margin-bottom: 2em;border-radius: 15px 15px 15px;">
-                <article class="propuesta">
-                  <div class="col-1-3">
-                    <img src="assets/images/propuesta/1.png" style="padding: 0.5em;">
-                  </div>
-                  <div class="col-2-3">
-                    <h2 style="font-size:18px;line-height:0.25em;border-left: 0px;margin-left: 0%;">Trabajo en equipo</h2>
-                  </div>
-                </article>
-              </div>
-            </div>
-            <div class="col-1-3">
-              <div style="background-color: rgba(193, 27, 43, 1);margin-bottom: 2em;border-radius: 15px 15px 15px;">
-                <article class="propuesta">
-                  <div class="col-1-3">
-                    <img src="assets/images/propuesta/1.png" style="padding: 0.5em;">
-                  </div>
-                  <div class="col-2-3">
-                    <h2 style="font-size:18px;line-height:0.25em;border-left: 0px;margin-left: 0%;">Trabajo en equipo</h2>
-                  </div>
-                </article>
-              </div>
-            </div>
-            <div class="col-1-3">
-              <div style="background-color: rgba(193, 27, 43, 1);margin-bottom: 2em;border-radius: 15px 15px 15px;">
-                <article class="propuesta">
-                  <div class="col-1-3">
-                    <img src="assets/images/propuesta/1.png" style="padding: 0.5em;">
-                  </div>
-                  <div class="col-2-3">
-                    <h2 style="font-size:18px;line-height:0.25em;border-left: 0px;margin-left: 0%;">Trabajo en equipo</h2>
-                  </div>
-                </article>
-              </div>
-            </div>
-            <div class="col-1-2">
-              <div
-                style="background-color: rgba(193, 27, 43, 1);margin-bottom: 2em;border-radius: 15px 15px 15px;margin-left: 10em;">
-                <article class="propuesta">
-                  <div class="col-1-3">
-                    <img src="assets/images/propuesta/1.png" style="padding: 0.5em;">
-                  </div>
-                  <div class="col-2-3">
-                    <h2 style="font-size:18px;line-height:0.25em;border-left: 0px;margin-left: 0%;">Trabajo en equipo</h2>
-                  </div>
-                </article>
-              </div>
-            </div>
-            <div class="col-1-2">
-              <div
-                style="background-color: rgba(193, 27, 43, 1);margin-bottom: 2em;border-radius: 15px 15px 15px;margin-right: 10em;">
-                <article class="propuesta">
-                  <div class="col-1-3">
-                    <img src="assets/images/propuesta/1.png" style="padding: 0.5em;">
-                  </div>
-                  <div class="col-2-3">
-                    <h2 style="font-size:18px;line-height:0.25em;border-left: 0px;margin-left: 0%;">Trabajo en equipo</h2>
-                  </div>
-                </article>
-              </div>
-            </div>
-            <div class="col-1-1">
-              <div
-                style="background-color: rgba(193, 27, 43, 1);margin-bottom: 6em;border-radius: 15px 15px 15px;margin-left: 23em;margin-right: 25em;">
-                <article class="propuesta">
-                  <div class="col-1-3">
-                    <img src="assets/images/propuesta/1.png" style="padding: 0.5em;">
-                  </div>
-                  <div class="col-2-3">
-                    <h2 style="font-size:18px;line-height:0.25em;border-left: 0px;margin-left: 0%;">Trabajo en equipo</h2>
-                  </div>
-                </article>
-              </div>
-            </div>
-        </div>
         </div>
       </div>
     </section>
 
     <section class="perfil" id="perfil">
-
-
-          <h2><span>PERFIL DEL
-              AGENTE</span></h2>
-
-        <div class="container" >
-          <div class="row"id="containerValores"></div>
-        
-        </div>
-
+      <h1><span>PERFIL DEL
+          AGENTE</span></h1>
+      <div class="container">
+        <div class="row" id="containerValores" style="margin-left:4em;margin-right:4em"></div>
+      </div>
     </section>
 
     <section class="teams" id="teams">
-      <div class="grid">
-        <div class="col-1-1">
-          <h2><span>NUESTRO
-              EQUIPO</span></h2>
-        </div>
-        <div style="margin:5em" id="containerAgent"></div>
+      <h1><span>NUESTRO
+          EQUIPO</span></h1>
+      <div class="container">
+        <div class="row" id="containerAgent" style="margin-left:4em;margin-right:4em"></div>
       </div>
     </section>
 
     <footer>
-      <div class="grid">
-        <div id="Encontranos" style="margin-top: 5em;">
-          <div class="col-1-2" style="padding-left: 15em;">
-            <img src="assets\images\footer.webp">
-            <p><span style="font-weight: bold;">DIRECCIÓN: </span><span>Camargo 537, Villa Crespo, CABA.</span>
-            <p><span style="font-weight: bold;">TELÉFONO: </span><span> 4858-3090</span>
-            <p><span style="font-weight: bold;">MAIL:</span><span><a href="mailto:time@remax.com.ar">
-                  time@remax.com.ar</a></span></p>
-            <div style="margin-right: 10em;">
-              <p><span style="font-size:10px;line-height:1em">En cumplimiento de las normas legales aplicables,
-                  informamos que los Agentes NO ejercen el Corretaje Inmobiliario. Todas las Operaciones
-                  Inmobiliarias son concluídas por los Corredores Matriculados responsables en cada
-                  oficina</p>
+      <div class="row" id="Encontranos" style="margin:0em">
+        <div class="encontranos">
+          <div class=" col-sm-12 col-md-6 col-xl-6">
+            <div>
+              <img src="assets\images\footer.webp">
+              <p><span class="bolder">DIRECCIÓN: </span><span>Camargo 537, Villa Crespo, CABA.</span>
+              <p><span class="bolder">TELÉFONO: </span><span> 4858-3090</span>
+              <p><span class="bolder">MAIL:</span><span><a href="mailto:time@remax.com.ar">
+                    time@remax.com.ar</a></span></p>
+              <div style="margin-right: 10em;">
+                <p><span class="legal">En cumplimiento de las normas legales aplicables,
+                    informamos que los Agentes NO ejercen el Corretaje Inmobiliario. Todas las Operaciones
+                    Inmobiliarias son concluídas por los Corredores Matriculados responsables en cada
+                    oficina</p>
+              </div>
+              <p><span class="last">José David Winer | CUCICBA 6346 | CMCPSI 6433</span>
             </div>
-            <p><span style="font-weight: bold;">José David Winer | CUCICBA 6346 | CMCPSI 6433</span>
           </div>
-          <div class="col-6-12">
-            <div style="margin-right: 15em;margin-bottom: 5em;">
-              <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.1236981470406!2d-58.441577166516346!3d-34.60103344727378!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccbc146e0e5fd%3A0xbd2cb76b26109626!2sRemax%20Time!5e0!3m2!1ses-419!2sar!4v1601174158097!5m2!1ses-419!2sar"
-                width="100%" height="220px" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
-                tabindex="0"></iframe>
-            </div>
+          <div class=" col-sm-12 col-md-6 col-xl-6" style="height:100%">
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.1236981470406!2d-58.441577166516346!3d-34.60103344727378!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccbc146e0e5fd%3A0xbd2cb76b26109626!2sRemax%20Time!5e0!3m2!1ses-419!2sar!4v1601174158097!5m2!1ses-419!2sar"
+              width="100%" height="100%" frameborder="0" style="border:0;" allowfullscreen="yes" aria-hidden="false"
+              tabindex="0"></iframe>
           </div>
         </div>
       </div>
     </footer>
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+      integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+      crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+      integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+      crossorigin="anonymous"></script>
 
-  
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-
     <script src="assets/scripts/simpleSlider.min.js"></script>
     <script>
-window.addEventListener("load", function(){
-  new SimpleSlider('.page-slider', {
-        autoplay: true,
-        delay: 2000
-      });
-})
-
-
-
+      window.addEventListener("load", function () {
+        new SimpleSlider('.page-slider', {
+          autoplay: true,
+          delay: 2000
+        });
+      })
     </script>
-
-
-
-
     <script src='assets/scripts/main.js'></script>
 </body>
 
