parte de propuesta casi terminada

--- a/Pagina remax/index.html
+++ b/Pagina remax/index.html
@@ -50,7 +50,7 @@
             target="_blank">Propiedades<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#Encontranos">Encontranos<span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="#encontranos">Encontranos<span class="sr-only">(current)</span></a>
         </li>
       </ul>
     </div>
@@ -85,24 +85,37 @@
     </div>
 
     <section class="porque" id="porque">
-      <div class="row" id="Encontranos" style="margin:0em">
-        <div class=" col-sm-12 col-md-6  col-xl-6" style=" background-color: rgba(138, 202, 255, 1);">
-          <h1 id="quienes">Por qué<img src="assets\images\REMAX - RGB-01.png" style="width:40%;padding-left: 0.5em;">?
-          </h1>
-          <h2>RE/MAX es la Empresa de Servicios Inmobiliarios más grande del mundo y opera en la
-            Argentina desde el año 2006.</h2>
-          <h2>Es una empresa dinámica que está transitando un momento de expansión.
-          </h2>
-          <h2>RE/MAX ha revolucionado el mundo inmobiliario ofreciendo capacitación y las más
-            altas comisiones del mercado.</h2>
-          <h2 style="margin-bottom:4.5em">Hoy en día cuenta con 150 oficinas desarrolladas en Argentina y
-            Uruguay.</h2>
-        </div>
-        <div class="col-sm-12 col-md-6 col-xl-6" style="padding: 0;">
-          <div>
-            <img src="assets\images\REMAX_mastrBalloon_RGB_R-01.png" class="globo"></img>
-            <img src="assets/images/porqueRemax.jpg" class="bottom">
+      <div class="row justify-content-md-centerx" id="Encontranos" style="margin:0em">
+        <div>
+          <div class=" col-sm-12 col-md-6  col-xl-6" style=" background-color: rgba(138, 202, 255, 1);">
+            <h1 id="quienes">Por qué<img src="assets\images\REMAX - RGB-01.png" style="width:40%;padding-left: 0.5em;">?
+            </h1>
+            <h2>RE/MAX es la Empresa de Servicios Inmobiliarios más grande del mundo y opera en la
+              Argentina desde el año 2006.</h2>
+            <h2>Es una empresa dinámica que está transitando un momento de expansión.
+            </h2>
+            <h2>RE/MAX ha revolucionado el mundo inmobiliario ofreciendo capacitación y las más
+              altas comisiones del mercado.</h2>
+            <h2 style="margin-bottom:4.5em">Hoy en día cuenta con 150 oficinas desarrolladas en Argentina y
+              Uruguay.</h2>
           </div>
+          <div class="col-sm-12 col-md-6 col-xl-6" style="padding: 0;">
+            <div>
+              <img src="assets\images\REMAX_mastrBalloon_RGB_R-01.png" class="globo"></img>
+              <img src="assets/images/porqueRemax.jpg" class="bottom">
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="propuesta" id="propuesta">
+      <div class="row justify-content-md-center">
+        <div class="col-12">
+        <h1><span>Por qué<img src="assets/images/REMAXTIME.png" style="width:25%;padding:0.4em;">?</span></h1>
+      </div>
+        <div class="container" style="padding-bottom: 1.5em;">
+          <div class="row justify-content-md-center" id="containerPropuesta" style="margin-left:4em;margin-right:4em"></div>
         </div>
       </div>
     </section>
@@ -124,7 +137,7 @@
     </section>
 
     <footer>
-      <div class="row" id="Encontranos" style="margin:0em">
+      <div class="row" id="encontranos" style="margin:0em">
         <div class="encontranos">
           <div class=" col-sm-12 col-md-6 col-xl-6">
             <div>
