--- a/Pagina remax/index.html
+++ b/Pagina remax/index.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light" style="background-color: white;">
+  <nav class="navbar fixed-top navbar-expand-lg navbar-light" style="background-color: white;">
     <a class="navbar-brand" href="#" style="margin-left: 7em;">
       <img src="assets\images\TIME 2018 (RGB).png" width="200px" class="d-inline-block align-top" alt=""
         loading="lazy"></a>
