--- a/Pagina remax/index.html
+++ b/Pagina remax/index.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-  <nav class="navbar fixed-top navbar-expand-lg navbar-light" style="background-color: white;">
+  <nav class="navbar navbar-expand-lg navbar-light" style="background-color: white;">
     <a class="navbar-brand" href="#" style="margin-left: 7em;">
       <img src="assets\images\TIME 2018 (RGB).png" width="200px" class="d-inline-block align-top" alt=""
         loading="lazy"></a>
@@ -86,36 +86,48 @@
 
     <section class="porque" id="porque">
       <div class="row justify-content-md-centerx" id="Encontranos" style="margin:0em">
-        <div>
-          <div class=" col-sm-12 col-md-6  col-xl-6" style=" background-color: rgba(138, 202, 255, 1);">
-            <h1 id="quienes">Por qué<img src="assets\images\REMAX - RGB-01.png" style="width:40%;padding-left: 0.5em;">?
+        <div class=" col-sm-12 col-md-6  col-xl-6" style=" background-color: rgba(138, 202, 255, 1); padding:0">
+          <div class=" col-12">
+            <h1 id="quienes">Por qué<img src="assets\images\REMAX - RGB-01.png"
+                style="width:200px;padding-left: 0.5em;">?
             </h1>
+          </div>
+          <div class=" col-12">
             <h2>RE/MAX es la Empresa de Servicios Inmobiliarios más grande del mundo y opera en la
               Argentina desde el año 2006.</h2>
+          </div>
+          <div class=" col-12">
             <h2>Es una empresa dinámica que está transitando un momento de expansión.
             </h2>
+          </div>
+          <div class=" col-12">
             <h2>RE/MAX ha revolucionado el mundo inmobiliario ofreciendo capacitación y las más
               altas comisiones del mercado.</h2>
+          </div>
+          <div class=" col-12">
             <h2 style="margin-bottom:4.5em">Hoy en día cuenta con 150 oficinas desarrolladas en Argentina y
               Uruguay.</h2>
           </div>
-          <div class="col-sm-12 col-md-6 col-xl-6" style="padding: 0;">
-            <div>
-              <img src="assets\images\REMAX_mastrBalloon_RGB_R-01.png" class="globo"></img>
-              <img src="assets/images/porqueRemax.jpg" class="bottom">
-            </div>
+        </div>
+        <div class="col-sm-12 col-md-6 col-xl-6" style="padding: 0;">
+          <div class="col-12">
+            <img src="assets\images\REMAX_mastrBalloon_RGB_R-01.png" class="globo" ></img>
+          </div>
+          <div class="col-12" style="padding:0">
+            <img src="assets/images/porqueRemax.jpg" height= 468px  class="bottom"></img>
           </div>
         </div>
       </div>
     </section>
 
     <section class="propuesta" id="propuesta">
-      <div class="row justify-content-md-center">
-        <div class="col-12">
-        <h1><span>Por qué<img src="assets/images/REMAXTIME.png" style="width:25%;padding:0.4em;">?</span></h1>
-      </div>
+      <div class="row justify-content-md-center" style="margin:0">
+        <div class="col-12" style="padding:0;margin:0">
+          <h1><span>Por qué<img src="assets/images/REMAXTIME.png" style="width:300px;padding:0.4em;">?</span></h1>
+        </div>
         <div class="container" style="padding-bottom: 1.5em;">
-          <div class="row justify-content-md-center" id="containerPropuesta" style="margin-left:4em;margin-right:4em"></div>
+          <div class="row justify-content-md-center" id="containerPropuesta" style="margin-left:4em;margin-right:4em">
+          </div>
         </div>
       </div>
     </section>
