comienzo de form

--- a/Pagina remax/index.html
+++ b/Pagina remax/index.html
@@ -148,6 +148,30 @@
       </div>
     </section>
 
+    <section class="postulate">
+      <div class="row justify-content-md-center">
+        <div class="col-12">
+          <h1><span>POSTULATE</span></h1>
+          <h3>Completá el formulario y nos contactaremos con vos!</h3>
+        </div>
+        <div>
+          <form action="/action_page.php">
+            <div class=" col-sm-12 col-md-6 col-xl-6" style="margin: 0em;padding: 0em;">
+              <div>
+                <label for="fname">Nombre y Apellido*</label><br>
+                <input type="text" id="NomYApe" name="NomYApe" style="width: 100%;" required><br>
+              </div>
+            </div>
+            <div class=" col-sm-12 col-md-6 col-xl-6">
+              <label for="lname">Last name:</label><br>
+              <input type="text" id="lname" name="lname" style="width: 400px;">
+              <input type="submit" value="Submit">
+            </div>
+          </form>
+        </div>
+      </div>
+    </section>
+    
     <footer>
       <div class="row" id="encontranos" style="margin:0em">
         <div class="encontranos">
