form terminado, solo falta accion

--- a/Pagina remax/index.html
+++ b/Pagina remax/index.html
@@ -149,51 +149,52 @@
     </section>
 
     <section class="postulate">
-      <div class="row justify-content-md-center" style="text-align: left;">
-        <div class="col-12">
-          <h1><span>POSTULATE</span></h1>
-          <h3>Completá el formulario y nos contactaremos con vos!</h3>
-        </div>
-        <div>
-          <form action="/action_page.php">
-            <div>
-              <div class=" col-sm-12 col-md-6 col-xl-6">
-                <label for="NomYApe">Nombre y Apellido*</label><br>
-                <input type="text" id="NomYApe" name="NomYApe" required><br>
-                <label for="email">Email*</label><br>
-                <input type="email" id="email" name="email" required><br>
-                <label for="Teléfono">Teléfono*</label><br>
-                <input type="tel" id="Teléfono" name="Teléfono" placeholder="011-XXXX-XXXX"
-                  pattern="([0-9]{3}-[0-9]{4}-[0-9]{4}|[0-9]{2}-[0-9]{4}-[0-9]{4})" required><br>
-              </div>
-              <div class=" col-sm-12 col-md-6 col-xl-6">
-                <label for="edad">Edad*</label><br>
-                <input type="number" id="edad" name="edad" required><br>
-                <label for="Residencia">Lugar de Residencia*</label><br>
-                <input type="text" id="Residencia" name="Residencia" required><br>
-              </div>
-            </div>
-            <div>
-              <div class=" col-sm-12 col-md-12 col-xl-12" style="padding-top: 2em;">
-                <label for="exp">¿Tenés experiencia en ventas?*</label><br>
-                <input class="large" type="text" id="exp" name="exp" required><br>
-              </div>
-              <div class=" col-sm-12 col-md-12 col-xl-12" style="padding-top: 2em;">
-                <label for="teamwork">¿Te gusta trabajar en en equipo?*</label><br>
-                <input class="large" type="text" id="teamwork" name="teamwork" required><br>
-              </div>
-              <div class=" col-sm-12 col-md-12 col-xl-12" style="padding-top: 2em;">
-                <input class="large" type="time" id="horas" name="horas" required><br>
-              </div>
-            </div>
-            <div class=" col-sm-12 col-md-12 col-xl-12" style="padding-top: 2em;">
-              <div style="text-align:center ;margin-left:1.5em">
-                <input type="submit" /><br>
-              </div>
-            </div>
-          </form>
-        </div>
+      <div class="col-12">
+        <h1><span>POSTULATE</span></h1>
+        <h3>Completá el formulario y nos contactaremos con vos!</h3>
       </div>
+      <form action="#" target="_blank">
+        <div class="row justify-content-md-center" style="text-align: left;">
+          <div>
+            <div class=" col-sm-12 col-md-6 col-xl-6">
+              <label for="NomYApe">Nombre y Apellido*</label><br>
+              <input type="text" id="NomYApe" name="NomYApe" required><br>
+              <label for="email">Email*</label><br>
+              <input type="email" id="email" name="email" required><br>
+              <label for="Teléfono">Teléfono*</label><br>
+              <input type="tel" id="Teléfono" name="Teléfono" placeholder="011-XXXX-XXXX"
+                pattern="([0-9]{3}-[0-9]{4}-[0-9]{4}|[0-9]{2}-[0-9]{4}-[0-9]{4})" required><br>
+            </div>
+            <div class=" col-sm-12 col-md-6 col-xl-6">
+              <label for="edad">Edad*</label><br>
+              <input type="number" id="edad" name="edad" required><br>
+              <label for="Residencia">Lugar de Residencia*</label><br>
+              <input type="text" id="Residencia" name="Residencia" required><br>
+            </div>
+          </div>
+          <div class="row justify-content-md-center" style="text-align: left;">
+            <div style="margin-right:10em;margin-left:10em;">
+              <div class=" col-sm-12 col-md-12 col-xl-12">
+                <label for="exp">¿Tenés experiencia en ventas?*</label><br>
+                <input style="width: 630px;" type="text" id="exp" name="exp" required><br>
+                <label for="independiente">¿Te animas a trabajar en forma independiente y sin ingresos
+                  fijos?</label><br>
+                <input style="width: 630px;" type="text" id="independiente" name="independiente" required><br>
+                <label for="teamwork">¿Te gusta trabajar en en equipo?*</label><br>
+                <input style="width: 630px;" type="text" id="teamwork" name="teamwork" required><br>
+                <label for="teamwork">¿Cuántas horas diarias podes dedicarle al proyecto Re/Max?*</label><br>
+                <input style="width: 630px;" type="time" id="horas" name="horas" required><br>
+              </div>
+            </div>
+          </div>
+          <div class="row justify-content-md-center" style="text-align: left;">
+            <div style="margin-right:10em;margin-left:10em;">
+              <div class=" col-sm-12 col-md-12 col-xl-12">
+                <input type="submit">
+              </div>
+            </div>
+          </div>
+      </form>
     </section>
 
     <footer>
